--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,9 +2,7 @@
     min-height: calc(100vh - 40px);
 }
 
-.nav-custom {
-    background-color: red;
-}
+
 .nav-custom .navbar-brand, .nav-custom .nav-link {
-    color: whitesmoke;
+    color: black;
 }
