added radio buttons

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,8 +3,13 @@
 }
 
 .nav-custom {
-    background-color: red;
+    background-color: #ef233c;
 }
+
 .nav-custom .navbar-brand, .nav-custom .nav-link {
     color: whitesmoke;
+}
+
+.text {
+    text-align: center;
 }
