--- a/public/css/event_detail.css
+++ b/public/css/event_detail.css
@@ -12,3 +12,30 @@
     margin-left: 5%;
     margin-right: 5%;
 }
+
+#event_title{
+    font-size: xx-large;
+    font-family: 'Libre Bodoni', serif;
+    color: var(--darker-green);
+    padding-bottom: 1rem;
+
+}
+#event_img{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+}
+
+.event-description{
+    font-size: large;
+}
+
+.btn-lg {
+    background-color: var(--green);
+    border-color: var(--green);
+    font-size: medium;
+    color: black;
+}
+.buttons{
+    margin-top: 0.5rem;
+}
