--- a/public/css/our_work.css
+++ b/public/css/our_work.css
@@ -1,4 +1,3 @@
-
 :root {
     /* CSS HEX */
     --imperial-red: #ef233c;
@@ -7,6 +6,7 @@
     --darker-green: #4f772d;
     --green: #b5c99a;
     --light-green: #cfe1b9;
+    --baige: #faf9f9;
 }
 
 
@@ -17,12 +17,21 @@
 }
 
 .h {
-    font-size: 50px;
-    font-family: 'Libre Bodoni', serif;
-    color: var(--darker-green);
+    font-size: 40px;
+    margin-bottom: 0.5rem;
 }
 
-h4 {
-    font-family: 'Libre Bodoni', serif;
-    color: var(--darker-green);
+.work h4{
+    font-size: xx-large;
+}
+
+.work p, .work button{
+    font-size: large;
+}
+
+.work{
+    margin: 1rem 1rem;
+    padding: 1rem 1rem;
+    background-color:var(--baige);
+    border-radius: 20px;
 }
