--- a/public/css/event_detail.css
+++ b/public/css/event_detail.css
@@ -8,10 +8,10 @@
     --light-green: #cfe1b9;
 }
 
-.nav-item{
-    margin-left: 5%;
-    margin-right: 5%;
-}
+/*.nav-item{*/
+/*    margin-left: 5%;*/
+/*    margin-right: 5%;*/
+/*}*/
 
 #event_title{
     font-size: xx-large;
